<resources>
    <string name="app_name">LeaderBoard</string>
    <string name="internet_connection_failed">Connection error. Check your internet connection!</string>
        <string name="app_close_message">Double click to close the app.</string>
    <string name="permission_missing">" permission are missing, Please allow permissions"</string>
    <string name="action_settings">Settings</string>
    <string name="allow">Allow</string>
    <string name="server_not_responding">500 - Server is under maintenance right now. Please try after some time.</string>
    <string name="not_internet">No internet connection...!</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="str_please_wait">Please Wait</string>
    <string name="no_network">No Network</string>
    <string name="no_internet_msg">AppName is unavailable while \n you are offline. Please connect \n to the internet and pull to \n refresh.</string>
    <string name="sub_heading">A social cataloging website that allows you to freely search its database of books, annotations, and reviews.</string>
    <string name="fiction">Fiction</string>
    <string name="book_name">The old man and the sea</string>
    <string name="author_name">Charles Dickens</string>
    <string name="drama">Drama</string>
    <string name="humor">Humor</string>
    <string name="politics">Politics</string>
    <string name="philosophy">Philosophy</string>
    <string name="history">History</string>
    <string name="adventure">Adventure</string>
    <string name="search">Search</string>
    <string name="no_mime_type_text">No viewable version available</string>
    <string name="total_stores">Total Stores</string>
    <string name="view_details">View Details</string>
    <string name="sort_by">Sort By</string>
    <string name="total_sales">Total Sales</string>
    <string name="add_to_card">Add To Cart</string>
    <string name="downloads">Donwloads</string>
    <string name="user_sessions">User Sessions</string>
</resources>
