<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="@dimen/_200sdp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.app.leaderboard.view.uibase.textviews.CustomBoldTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:gravity="center"
        android:text="@string/sort_by"
        android:textSize="@dimen/_12sdp"
        android:id="@+id/sortText"
        android:textColor="@color/text_color"
       android:layout_margin="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:id="@+id/view"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/sortText"
        android:background="@color/text_color"/>

    <RadioGroup
      android:layout_margin="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/view"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:text="@string/total_sales"
            android:textSize="@dimen/_10sdp"
            android:textAllCaps="true"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:id="@+id/totalSalesText"
           android:paddingLeft="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:text="@string/add_to_card"
            android:textSize="@dimen/_10sdp"
            android:textAllCaps="true"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:id="@+id/addToCartText"
            android:paddingLeft="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:text="@string/downloads"
            android:textSize="@dimen/_10sdp"
            android:textAllCaps="true"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:id="@+id/downloadsText"
            android:paddingLeft="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:text="@string/user_sessions"
            android:textSize="@dimen/_10sdp"
            android:textAllCaps="true"
            android:id="@+id/userSessionText"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:paddingLeft="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>